--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,79 @@
 * {
+    /* box-sizing: border-box; */
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#main-box {
-    padding: 10%;
-    
+#quiz-box {
+    margin: 20px;
+    padding: 3% 3% 28%;
+    border: 3px solid darkslategrey;
+    border-radius: 10px;
+    overflow: auto;
 }
 
-h5 {
+/* #score-box {
+} */
+
+#high-score {
+    margin: 0;
     color: mediumorchid;
+    display: inline;
+    float: left;
 }
 
-#content-box {
-    padding: 10%;
-    border-width: 1px;
-    border-radius: 5px;
-    border-color: black;
+#timer {
+    margin: 0;
+    display: inline;
+    float: right;
 }
 
-.btn {
+#question-box {
+    /* padding: 20px 0px 60px; */
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+#header-title {
+    margin-top: 8%;
+    text-align: center;
+}
+
+#quiz-instructions {
+    margin: 0% 15% 0%;
+    text-align: center;
+    font-size: 14pt;
+}
+
+#start-button {
     border: none;
     border-radius: 10px;
+    font-size: 12pt;
     color: aliceblue;
     background-color: darkslateblue;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
-    margin-top: 10px;
     padding: 12px 15px;
+    margin: 0 auto;
+    display: block;
 }
 
+/* button press effect */
+#start-button:active {
+    transform: scale(0.98);
+}
+
+@media (max-width: 690px) {
+    .btn {
+      font-size: 1rem;
+      margin: 16px 0px 0px 0px;
+      padding: 10px 15px;
+    }
+  
+    #password {
+      font-size: 1rem;
+    }
+  }
+  
+  @media (max-width: 500px) {
+    .btn {
+      font-size: 0.8rem;
+    }
+  }
