--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
 #quiz-box {
     margin: 20px;
     padding: 3% 3% 28%;
-    border: 3px solid darkslategrey;
+    border: 3px solid dimgray;
     border-radius: 10px;
     overflow: auto;
 }
@@ -44,9 +44,13 @@
     font-size: 14pt;
 }
 
+#question-box {
+    /* display: none;  */
+    /* toggle display */
+}
+
 #question {
-    margin-top: 8%;
-    margin-left: 18%;
+    margin: 8% 8% 0% 18%;
     text-align: left;
 }
 
@@ -58,6 +62,28 @@ ul {
     list-style: none;
 }
 
+#correct-or-wrong {
+    margin: 0% 18%;
+    text-align: left;
+    color: lightslategray;
+    font-style: italic;
+    font-weight: lighter;
+    text-indent: 3%;
+    border-top: 2px solid lightslategray;
+    /* display: none;  */
+    /* toggle display */
+}
+
+#final-score-box {
+    text-align: center;
+    /* display: none;  */
+    /* toggle display */
+}
+
+#final-score {
+    font-size: 14pt;
+}
+
 #start-button {
     border: none;
     border-radius: 10px;
@@ -67,6 +93,7 @@ ul {
     padding: 12px 15px;
     margin: 0 auto;
     display: block;
+    cursor: pointer;
 }
 
 #answer-1, 
@@ -82,12 +109,24 @@ ul {
     cursor: pointer;
 }
 
+#score-submit {
+    border: none;
+    border-radius: 10px;
+    margin-left: 10px;
+    padding: 5px 10px;
+    font-size: 12pt;
+    color: aliceblue;
+    background-color: darkslateblue;
+    cursor: pointer;
+}
+
 /* button press effect */
 #start-button:active,
 #answer-1:active, 
 #answer-2:active, 
 #answer-3:active, 
-#answer-4:active {
+#answer-4:active,
+#score-submit:active {
     transform: scale(0.98);
     background-color: mediumorchid;
 }
