fixed view high scores button and other high scores page buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,13 @@
     display: none;
 }
 
-#high-score {
+#view-high-scores {
     margin: 0;
     color: mediumorchid;
     display: inline;
     float: left;
+    border: none;
+    background: none;
 }
 
 #timer {
